--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,12 +23,14 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore -r win-x86 --self-contained true
+      run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish
+      run: dotnet publish --configuration Debug --runtime win-x64 --self-contained true --output $(build.artifactstagingdirectory)'
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
         name: "NLP"
-        path: "bin/Debug"
+        path: "$(build.artifactstagingdirectory)"
