--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish
-      run: dotnet publish --configuration Debug --runtime win-x64 --self-contained true --output $(build.artifactstagingdirectory)'
+      run: dotnet publish --configuration Debug --runtime win-x64 --self-contained true --output $(build.artifactstagingdirectory)
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
